Fix issue selecting theme on mobile devices

--- a/web/src/layout/common/Card.module.css
+++ b/web/src/layout/common/Card.module.css
@@ -107,8 +107,13 @@
   max-height: 22px;
 }
 
+.dot {
+  min-width: 14px;
+}
+
 .badgesWrapper {
   max-height: 22px;
+  min-width: 150px;
 }
 
 .badge {
